AS7-4469: Also fix session id attribute that got standardized in Servlet 3.